apps/paperless-ngx/deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-ngx-redis
  template:
    metadata:
      labels:
        app: paperless-ngx-redis
    spec:
      containers:
        - name: redis
          image: docker.io/library/redis:8
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-ngx-redis-data
