apps/paperless-ngx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: paperless-ngx
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: paperless-ngx-ui
  template:
    metadata:
      labels:
        app: paperless-ngx-ui
    spec:
      # this init conainer is needed to set the correct permissions on the sync volume and to initialize the consume and export folders
      containers:
        - name: paperless-ngx
          image: ghcr.io/paperless-ngx/paperless-ngx:2.20.15
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless/data
            - name: media
              mountPath: /usr/src/paperless/media
            - name: sync
              mountPath: /usr/src/paperless/sync
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-ngx-data
        - name: media
          persistentVolumeClaim:
            claimName: paperless-ngx-media
        - name: sync
          persistentVolumeClaim:
            claimName: paperless-ngx-sync
      # prevent two UI pods from being scheduled at a time, only one instance should be running to not corrupt the data
      podAntiAffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: app
                  operator: In
                  values:
                    - paperless-ngx-ui
            topologyKey: "kubernetes.io/hostname"
