apps/paperless-ngx/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: paperless-ngx
spec:
  selector:
    app: paperless-ngx-redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
