apps/paperless-ngx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: paperless-ngx
spec:
  selector:
    app: paperless-ngx-ui
  ports:
  - port: 8000
    targetPort: 8000
    name: http
