apps/paperless-ngx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  namespace: paperless-ngx
  labels:
    app: paperless-ngx-ui
spec:
  ingressClassName: nginx
  rules:
  - host: paperless.berlin.bruegner.com
    http:
      paths:
      - backend:
          service:
            name: ui
            port:
              number: 8123
        path: /
        pathType: Prefix
